--- a/hello.html
+++ b/hello.html
@@ -10,5 +10,8 @@
   <h1>hello.world</h1>
   <h2>Hi</h2>
   <h2>Good morning</h2>
+  <p>初めまして</p>
+  <p>長山と申します</p>
+  <p>よろしくお願いします</p>
 </body>
 </html>
